--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/react": "^16.9.2",
     "@types/react-router": "^5.0.5",
+    "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
+    "@types/styled-system": "^5.1.1",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
@@ -24,6 +26,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
+    "styled-system": "^5.1.2",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
