--- a/packages/backend/src/services/prisma/package.json
+++ b/packages/backend/src/services/prisma/package.json
@@ -8,8 +8,12 @@
     "postinstall": "prisma2 generate"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "apollo-link-context": "^1.0.19",
     "bcrypt": "3.0.6",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "faker": "^4.1.0",
     "graphql-shield": "5.7.3",
     "graphql-yoga": "1.18.3",
     "jsonwebtoken": "^8.5.1",
@@ -18,6 +22,7 @@
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/faker": "^4.1.5",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "8.3.4",
     "@types/node": "12.7.5",
